# sortnbackup

./: .gitignore  Cargo.toml  README.md  config.yaml  index.yaml
.github/workflows/: release.yml  test.yml
src/: cli.rs  config.rs  date_time.rs  file_path.rs  img.rs  main.rs  util.rs
test_target/JSON/2021-03-16/: .rustc_info.json
test_target/Misc/debug/: sortnbackup.d
