[package]
name = "sortnbackup"
version = "1.3.0"
authors = ["Thomas Schaller <me@torkleyy.com>"]
edition = "2018"
description = "Copy files from multiple sources to multiple targets using highly customizable filters and rules"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
chrono = "0.4.19"
clap = "2"
fakemap = "0.2"
humansize = "1.1.0"
immeta = "0.4.0"
indicatif = "0.15"
kamadak-exif = "0.5.3"
md5 = "0.7"
parking_lot = { version = "0.11.1", features = ["serde"] }
pathdiff = "0.2.0"
rayon = "1.5.0"
regex = "1.4.5"
serde = { version = "1", features = ["serde_derive"] }
serde_regex = "1.1.0"
serde_yaml = "0.8"
sysinfo = "0.16.4"
walkdir = "2.3.1"
